--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -114,12 +114,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88633d83-a127-4648-8882-ffa79da6ff33",
+   "cell_type": "markdown",
+   "id": "46de4424-e7a7-48b4-9af2-8c78af57247c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Author\n",
+    "Jonathan L"
+   ]
   }
  ],
  "metadata": {
